# iNaffio

./: .gitignore  README.md  configs.json  inaffio.py  requirements.txt
inaffio_utils/: pyproject.toml
inaffio_utils/src/db_utils/: db_message.py
inaffio_utils/src/message_utils/: bot_messages.py
tasks/: bot_task.py  db_task.py  pump_task.py  sensor_task.py
